Minor: fix pager alignment

--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -4,6 +4,9 @@
     display: inline;
     float: right;
 }
+.c-buttoneGroup__viewMode {
+    display: inline;
+}
 .c-featurePager__navButtons {
     display: inline;
     margin-right: 3rem;
